# Frogger

./: .gitignore  CMakeLists.txt  Frogger.sln  main.c  tests.c
Frogger/: CMakeLists.txt  Frogger.vcxproj  Frogger.vcxproj.filters  main.c  texture_manager.h
Frogger.Tests/: Frogger.Tests.vcxproj  Frogger.Tests.vcxproj.filters  pch.cpp  pch.h  test_physics_manager.cpp  test_sprite.cpp  test_texture_manager.cpp
Frogger.Tests/.opencppcov/Frogger.Tests/: Debug_x64.json
Frogger.Tests/Engine.Tests/: test_update_manager.cpp
Frogger.Tests/Engine.Tests/Actors/: test_game_object.cpp
Frogger.Tests/Engine.Tests/Gfx/: test_draw_manager.cpp
Frogger.Tests/Engine.Tests/Physics/: test_collision_info.cpp  test_rect.cpp  test_rigid_body.cpp  test_vector2.cpp
Frogger.Tests/Engine/Actors/: test_game_object.cpp
Frogger.Tests/Engine/Gfx/: test_draw_manager.cpp
Frogger.Tests/Engine/Physics/: test_collision_info.cpp  test_rect.cpp  test_rigid_body.cpp  test_vector2.cpp
Frogger/Engine/: game_clock.c  game_clock.h  update_manager.h
Frogger/Engine/Actors/: background.c  game_object.c  game_object.h  obstacle.c  obstacle.h  player.c  player.h
Frogger/Engine/Gfx/: draw_manager.h  image_info.c  sprite.c  sprite.h
Frogger/Engine/Physics/: collision_info.h  physics_manager.c  physics_manager.h  rect.c  rect.h  rigid_body.c  rigid_body.h  vector2.c  vector2.h
Frogger/dependencies/: CMakeLists.txt
Frogger/src/: main.c
Frogger/src/actors/: game_object.h  obstacle.c  player.h
Frogger/src/engine/: draw_manager.c  draw_manager.h  physics_manager.c  texture_manager.c  texture_manager.h  update_manager.h
Frogger/src/engine/gfx/: image_info.c
Frogger/src/engine/physics/: collision_info.c  rect.c  vector2.h
Frogger/tests/: CMakeLists.txt
Frogger/tests/engine/: test_draw_manager.cpp  test_physics_manager.cpp  test_update_manager.cpp
Frogger/tests/engine/physic/: test_rect.cpp  test_rigid_body.cpp
dependencies/: CMakeLists.txt
engine/: clock.c  clock.h  collision_info.c  collision_info.h  draw_manager.c  draw_manager.h  engine.c  engine.h  game_clock.c  game_clock.h  game_object.c  game_object.h  rect.c  rect.h  vector2.c  vector2.h
engine/actors/: background.c  background.h  game_object.c  game_object.h  obstacle.c  obstacle.h  player.c  player.h
engine/gfx/: draw_manager.c  draw_manager.h  image_info.c  image_info.h  sprite.c  sprite.h
engine/physics/: collision_info.c  collision_info.h  physics_manager.c  physics_manager.h  rect.c  rect.h  rigid_body.c  rigid_body.h  vector2.c  vector2.h
include/engine/actors/: game_object.h  update_manager.h
include/engine/gfx/: draw_manager.h  interface_gpu_api.h  interface_renderer.h  interface_texture.h  interface_window.h  sprite.h
include/engine/physics/: physics_manager.h  rigid_body.h
include/engine/utilities/: collision_info.h  game_clock.h  image_info.h  texture_manager.h
include/frogger/: background.h  obstacle.h  player.h
include/math/: rect.h  vector2.h
src/: Frogger.c  main.c
src/actors/: background.h  game_object.c  obstacle.h  player.c
src/engine/: physics_manager.h  update_manager.c
src/engine/actors/: game_object.c  update_manager.c
src/engine/gfx/: draw_manager.c  image_info.c  sprite.c
src/engine/physics/: physics_manager.c  rigid_body.c  vector2.c
src/engine/sdl2_wrapper/: interface_renderer.c  interface_texture.c  interface_window.c
src/engine/utilities/: collision_info.c  game_clock.c  image_info.c  texture_manager.c
src/frogger/: background.c  obstacle.c  player.c
src/gfx_wrapper/: interface_gpu_api.c  interface_renderer.c  interface_texture.c  interface_window.c
src/math/: rect.c  vector2.c
tests/: CMakeLists.txt  pch.h  test_clock.c  test_collision_info.c  test_draw_manager.c  test_game_object.c  test_rect.c  test_vector2.c  tests.c
tests/actors/: test_game_object.cpp
tests/engine/: test_texture_manager.cpp
tests/engine/gfx/: test_sprite.cpp
tests/engine/physic/: test_collision_info.cpp  test_vector2.cpp
tests/engine/utilities/: test_game_clock.cpp
